<resources>
    <string name="app_name">Eva2appIoT</string>
        <string name="nombre">Nombre</string>
        <string name="email">Email</string>
        <string name="contrasena">Contraseña</string>
        <string name="registrar">Registrar</string>
        <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Inicia sesión</string>
        <string name="titulo_noticias">Noticias</string>
        <string name="agregar_noticia">Agregar noticia</string>
        <string name="default_web_client_id">1005977601924-hlq5uis7qmb9sjkfcso91md5m58lhe76.apps.googleusercontent.com</string>
</resources>